--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,7 @@ set -g renumber-windows on
 run "vim +qall > /dev/null"
 
 # reattach-to-user-namespace allows vim to share OSX's clipboard.
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # Mouse support
 set-option -g mouse-select-window on
@@ -63,7 +63,8 @@ bind-key Escape copy-mode
 bind-key p paste-buffer
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy C-v rectangle-toggle
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 
 
